# linguamechanica

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docker/: README.md
docker/dockerfiles/base/: Dockerfile
docker/dockerfiles/desktop/: Dockerfile
linguamechanica/: agent.py  environment.py  inference.py  kinematics.py  models.py  ros_inference.py  se3.py  test.py  train.py  training_context.py
ros/: requirements.txt
tests/linguamechanica/: test_kinematics.py  test_se3.py
urdf/: cr5.urdf
