[tool.poetry]
name = "linguamechanica"
version = "0.1.0"
description = ""
authors = ["Pau Carré Cardona <pau.carre@gmail.com>"]
readme = "README.md"
packages = [{include = "linguamechanica"}]

[tool.poetry.dependencies]
python = "^3.10"
coverage = "7.2.7"
black = "^23.3.0"
pytest = "^7.3.2"
pyqt5 = "^5.15.9"
trimesh = "^3.22.1"
pycollada = "^0.7.2"
pydot = "^1.4.2"
autoflake = "^2.2.0"
fvcore = "^0.1.5.post20221221"
iopath = "^0.1.10"
jupyterlab = "4.0.1"
tqdm = "^4.65.0"
pytransform3d = "^3.4.0"
pytest-coverage = "^0.0"
pyright = "^1.1.322"
dacite = "^1.8.1"
click = "^8.1.7"
isort = "^5.12.0"
shapely = "^2.0.1"
sympy = "^1.12"
pybullet = "^3.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"
